whp-web/src/main/webapp/styles/standard.css
/* ... */
.login-form hr {
    border-color: rgba(255, 255, 255, 0.2);
    border-width: 0 0 1px 0;
    margin: 15px 0;
}
.login-form .login-controls {
    padding: 0 120px;
}

.login-form h1 .site-name {
    padding-right: 10px;
    border-right: 1px solid rgba(255, 255, 255, 0.5);
    margin-right: 10px;
    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5);
}
.login-form h1 a, .login-form h1 a:hover {
    color: #fff;
    text-decoration: none;
}
.login-form h1 a:hover {
    text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.7);
}
.login-form h1 .module-name {
    font-size: 75%;
    color: rgba(255, 255, 255, 0.6);
}

.login-form .control-group {
    margin-bottom: 15px;
}

.login-form .alert {
    margin-left: 0;
}

/* NavBar Menu */

.navbar-inner {
    font-family: 'Telex',sans-serif;
    color: #F5F5F5;
    background-color: #3F9FD9;
    background-repeat: no-repeat;
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5683AA), to(#375978));     /* Safari 4-5, Chrome 1-9 */
    background-image: -webkit-linear-gradient(#5683AA, #375978);  /* Safari 5.1, Chrome 10+ */
    background-image: -moz-linear-gradient(#5683AA, #375978);   /* Firefox 3.6+ */
    background-image: -ms-linear-gradient(#5683AA, #375978);   /* IE 10 */
    background-image: -o-linear-gradient(#5683AA, #375978);     /* Opera 11.10+ */
    background-image: linear-gradient(#5683AA, #375978);        /* w3c */

}
.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
    padding: 7px 20px;
    border-color: rgba(126, 126, 126, 0.5)
}

.navbar .brand {
    border-right:1px solid rgba(255, 255, 255, 0.35);
    color: #F5F5F5;
    font-size: 22px;
    line-height: 1;
    margin: 0;
    padding: 6px 15px 6px 0;
    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5);
}
.navbar .brand:hover {
    color: #fff;
    text-shadow: -2px -2px 0 rgba(0, 0, 0, 0.5);
}
.navbar .nav {
    border-left:1px solid rgba(0, 0, 0, 0.5);
    padding-left: 10px;
    margin:0;
}
.navbar .nav.pull-right {
    border: 0;
    padding: 0;
}
.navbar .nav > li > a {
    color: #F5F5F5;
    margin: 0;
    padding: 8px 15px;
    line-height: normal;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.navbar .nav > li > a#logout{ padding-right: 0;}
.navbar .nav > li > a:focus, .navbar .nav > li > a:hover {
    color: #fff;
}
.navbar .nav-pills > li > a:focus, .navbar .nav-pills > li > a:hover {
    background-color: rgba(0, 0, 0, 0.1);
}
.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
    background-color: rgba(0, 0, 0, 0.5);
    color: #fff;
}

.navbar .nav li.dropdown.open > .dropdown-toggle .caret, .navbar .nav li.dropdown.active > .dropdown-toggle .caret, .navbar .nav li.dropdown.open.active > .dropdown-toggle .caret,
.navbar .nav li.dropdown .dropdown-toggle .caret, .navbar .nav li.dropdown.open .caret {
    border-bottom-color: #FFFFFF;
    border-top-color: #FFFFFF;
}
.dropdown-menu li {
     border-bottom:  1px dotted rgba(0,0,0,0.1);
 }
.dropdown-menu li:last-child {
    border: 0;
}
.dropdown-menu a {
    padding: 7px 15px;
}

.caret {
    opacity: 0.5;
    filter: alpha(opacity=50);
}
.icon-white {
    opacity: 0.75;
    filter: alpha(opacity=75);
}
.dropdown:hover .caret, .open .caret,
.dropdown:hover .icon-white , .open .icon-white, .nav-pills a:hover .icon-white {
    opacity: 1;
    filter: alpha(opacity=100);
}

/* table */
.table {
    background: #f4f4f4;
    border: 1px solid #CCCCCC;
    border-radius: 3px 3px 3px 3px;
    box-shadow: 0 1px 2px #D1D1D1;
    color: #666666;
    font-family: Arial,Helvetica,sans-serif;
    font-size: 12px;
    text-shadow: 1px 1px 0 #FFFFFF;
}
.table thead th {
    background-color: #E1E1E1;
    background-repeat: repeat;
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F1F1F1), to(#E1E1E1));    /* Safari 4-5, Chrome 1-9 */
    background-image: -webkit-linear-gradient(center top , #F1F1F1, #E1E1E1);    /* Safari 5.1, Chrome 10+ */
    background-image: -moz-linear-gradient(center top , #F1F1F1, #E1E1E1);      /* Firefox 3.6+ */
    background-image: -ms-linear-gradient(center top , #F1F1F1, #E1E1E1);       /* IE 10 */
    background-image: -o-linear-gradient(center top , #F1F1F1, #E1E1E1);        /* Opera 11.10+ */
    background-image: linear-gradient(center top , #F1F1F1, #E1E1E1);     /* w3c */
    border-bottom: 1px solid #E0E0E0;
    border-top: 1px solid #FBFBFB !important;
    padding: 10px 5px;
    vertical-align: middle;
}

.table tr:first-child th:first-child {
    border-top-left-radius: 3px;
}
.table tr:first-child th:last-child {
    border-top-right-radius: 3px;
}

.ellipsis {
    display: block;
    overflow: hidden;
    white-space: nowrap;
    width: 175px;
	text-overflow: ellipsis;
}
/* print specific style */
@media print {
    body, #treatmentCard td, .table td, .table th {
		background: #fff;
	}
	.navbar-fixed-top {
		position: static;
	}
	.navbar-fixed-top  img{
		margin-top: 15px;
	}
}


.provider-row.adherence-status-row.not-reported td{
    background-color: rgba(255, 0, 0, 0.2);
    color:black;
    text-shadow:none;
}

.provider-row.adherence-status-row.reported td{
    background-color: rgba(0, 255, 0, 0.2);
    color:black;
    text-shadow:none;
}

.beside-header{
    line-height:41px;
}

.printable-table {
    clear:both;
    border: 1px solid;
    text-align: center;
    width:100%;
    table-layout: fixed;
}

.printable-table  th  {
    border:1px solid black;
}

.printable-table  td  {
    border:1px solid black;
}

.adherence-report .printable-table  .providerId{
    font-weight:bold;
    width:12em;
}

.adherence-report .printable-table .smaller-column {
    width: 10em;
}

.adherence-report .printable-table .smallest-column {
    width: 3em;
}

.adherence-report .providerId{
    font-weight:bold;
    width:15px;
}

.adherence-report .adherence-status-table{
    table-layout: fixed;
}

.adherence-status-row{
    font-size:130%
}
/* ... */

